Working Validation for: -UserID -First Name -Last Name -Email -City -State -Zip Code -Loan Account -Payment Method

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <p>*required</p>
             <label for="user-id">User ID*:</label><br>
             <input type="text" id="user-id" required><br>
-            <label for="password-one">Enter a Password*:</label><br>
+            <!-- <label for="password-one">Enter a Password*:</label><br>
             <input type="password" id="password-one" required><br>
             <label for="password-two">Re-enter Password*:</label><br>
-            <input type="password" id="password-two" required><br>
+            <input type="password" id="password-two" required><br> -->
             <label for="first-name">First Name*:</label><br>
             <input type="text" id="first-name" required><br>
             <label for="last-name">Last Name*:</label><br>
@@ -100,7 +100,7 @@
             <input type="submit" value="Submit" id="submit-button">
         </form>
     <section id="account-error">
-            <div>Please Fix Highlighted Errors </div>
+            <div id="error-message"></div>
     </section>
     <section id="account-info-display">
         <div id=display-user-id></div>
